usb-backend: Fix devices not being enumerated

This patch fixes bad filtering of USB devices.

The logic was introduced for windows clients in commit b838937 but was
moved in 2e19014 and executed also by non windows clients, resulting
in this bug.

Fixes: 2e19014 "usb-redir: isolate usage of libusb and usbredirhost"
Fixes: https://gitlab.freedesktop.org/spice/spice-gtk/-/issues/157
Signed-off-by: Victor Toso <victortoso@redhat.com>